--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.2"
+    "axios": "^1.6.5",
+    "bootstrap": "^5.3.2",
+    "dayjs": "^1.11.10"
   }
 }
